src/test/deca/context/invalid/created/unary_exp/not_float.deca
// Description :
//    test not avec un float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.37) Type opérande : float , attendu : boolean pour l’opérateur !

{
boolean a = !3.2;
}